# NyaMarkdownor

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  RECOVERY_AND_VERSION_HISTORY.md
scripts/: tauri-build.mjs
src/: main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  updater.rs
src/hooks/: useDebouncedValue.ts  useMarkdownWorker.ts
src/lib/: appShortcuts.test.ts  appShortcuts.ts  appUpdates.test.ts  appUpdates.ts  autoSave.test.ts  autoSave.ts  buildInfo.test.ts  buildInfo.ts  clipboard.test.ts  clipboard.ts  clipboardTableRows.test.ts  clipboardTableRows.ts  codeHighlight.test.ts  codeHighlight.ts  commands.test.ts  commands.ts  desktopConfig.test.ts  desktopStore.test.ts  desktopStore.ts  diskReview.test.ts  diskReview.ts  documentDirtyState.test.ts  documentDirtyState.ts  documentMetrics.test.ts  documentMetrics.ts  documentSaveState.test.ts  documentSaveState.ts  documentTabNavigation.test.ts  documentTabNavigation.ts  documentTabs.test.ts  documentTabs.ts  draftDocument.test.ts  draftDocument.ts  draftSnapshots.test.ts  draftSnapshots.ts  dropOpen.test.ts  dropOpen.ts  editorCommands.test.ts  editorCommands.ts  editorFocus.test.ts  (+142 more)
src/ui/: App.tsx  BackupCompareDialog.css  BackupCompareDialog.tsx  CommandPalette.tsx  FileHistoryManagerDialog.tsx  FindReplacePanel.tsx  InsertTableDialog.tsx  LinkDialog.tsx  (+8 more)
(+1 files in other folders)
