[package]
name = "nya-markdownor"
version = "1.0.13"
description = "A local-first Markdown editor."
authors = ["NyaMarkdownor Contributors"]
edition = "2021"

[lib]
name = "nya_markdownor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["native-tls-no-alpn", "system-proxy"] }
semver = "1"
dunce = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Globalization"] }
winreg = "0.55"
